Añadiendo Grid a cada pagina

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     </div>
 
                     <div class="p-about">
-                        <p>Soy desarrolladora Front-end ubicada en Ciudad Real (España), tambien con estudios de diseño UX/UI en Labasad (Barcelona).</p>
+                        <p>Soy desarrolladora Front-end ubicada en Ciudad Real (España), tambien con estudios de diseño UX/UI en la escuela de Labasad (Barcelona).</p>
                         <br>
                         <p>Me apasiona todo lo que tenga que ver con el diseño y desarrollo web.</p>
                         <br>
@@ -50,10 +50,7 @@
                     </div>
                     
                     <div class="card-profile">
-                        <div class="salute">
-                            <p>¡Hola!, soy Lucia</p>
-                            <img src="./img/window.png" alt="Ventana de saludo Lucia">
-                        </div>
+                        <p>¡Hola!, soy Lucia</p>
                         <img src="./img/photo.png" alt="Retrato Lucia">
                         <div class="rrss">
                             <img class="git" src="./img/github.png" alt="Github Lucia">
