Eventos y CSS menu

--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
 </head>
 <body>
     <header>
+        <div class="nav">
+            <h1>INICIO</h1>
+            <h1>CONÓCEME</h1>
+            <h1>HABILIDADES</h1>
+            <h1>PROYECTOS</h1>
+            <h1>CONTÁCTAME</h1>
+            
+        </div>
         <div class="container-header">
             <img class="logo" src="./img/logo.png" alt="Logo Lucia">
 
@@ -21,12 +29,14 @@
                 <span></span>
             </div>
         </div>
+        
     </header>
     <main class="swiper-container">
         <div class="swiper-wrapper">
             <div class="swiper-slide">
                 <div class="home">
-                    <h1>LU</h1>
+                    <h1 class="h1-2">LU</h1>
+                    <h1 class="h1-1">LU</h1>
                     <p>Desarrolladora <br> Front-End</p>
                     <div class="b-h1"></div>
                     <img src="./img/arrow-home.png" alt="Scroll Down">
@@ -148,6 +158,7 @@
     <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="js/swiper.js"></script>
+    <script src="js/events.js"></script>
 
 </body>
 </html>
