link de logo y menu

--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
 <body>
     <header>
         <div class="nav">
-            <h1 class="#home">INICIO</h1>
-            <h1 class="#about">CONÓCEME</h1>
-            <h1 class="#skills">HABILIDADES</h1>
-            <h1 class="#projects">PROYECTOS</h1>
-            <h1 class="#contact">CONTÁCTAME</h1>
+            <h1 data-index="1">INICIO</h1>
+            <h1 data-index="2">CONÓCEME</h1>
+            <h1 data-index="3">HABILIDADES</h1>
+            <h1 data-index="4">PROYECTOS</h1>
+            <h1 data-index="5">CONTÁCTAME</h1>
             
         </div>
         <div class="container-header">
-            <img class="logo" src="./img/logo.png" alt="Logo Lucia">
+            <img id="logo" class="logo" src="./img/logo.png" alt="Logo Lucia"></a>
 
             <div class="menu">
                 <span></span>
@@ -33,7 +33,7 @@
     </header>
     <main class="swiper-container">
         <div class="swiper-wrapper">
-            <div class="swiper-slide" data-index="0">
+            <div class="swiper-slide" >
                 <div class="home">
                     <h1 class="h1-2">LU</h1>
                     <h1 class="h1-1">LU</h1>
@@ -44,7 +44,7 @@
                 </div>
             </div>
             <div class="swiper-slide">
-                <div class="about" data-index="1">
+                <div class="about">
                     
                     <div class="title-section">
                         <h1>Conóceme</h1>
