media queries en todas las paginas

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                     <h1 class="h1-2">LU</h1>
                     <h1 class="h1-1">LU</h1>
                     <p>Desarrolladora <br> Front-End</p>
-                    <div class="b-h1"></div>
-                    <img src="./img/arrow-home.png" alt="Scroll Down">
+                    <img class="b-h1" src="./img/b-h1.png" alt="Etiqueta h1">
+                    <img class="arrow" src="./img/arrow-home.png" alt="Scroll Down">
                     
                 </div>
             </div>
