--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     </div>
                     
                     <div class="card-profile">
-                        <p id="saludo">¡Hola!, soy Lucía</p>
+                        <div class="saludo" id="saludo">¡Hola!, soy Lucía</div>
                         <img src="./img/photo.png" alt="Retrato Lucia">
                         <div class="rrss">
                            <a href="https://github.com/luciamouriz"><img class="git" src="./img/github.png" alt="Github Lucia"></a> 
