--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="fonts/stylesheet.css">
     <link rel="stylesheet" href="css/mobile.css">
     <link rel="stylesheet" href="css/desktop.css" media="screen and (min-width: 1280px)">
+    <link rel="stylesheet" href="css/tablet.css" media="screen and (min-width: 640px) and (max-width: 1280px)">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css" />
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
     <title>LU | Portfolio</title>
