--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     </div>
                     
                     <div class="card-profile">
-                        <div class="saludo" id="saludo">¡Hola!, soy Lucía</div>
+                        <div class="saludo" id="saludo">¡Hola!, soy <span>Lu</span>cía</div>
                         <img src="./img/photo.png" alt="Retrato Lucia">
                         <img class="b-img" src="./img/b-img.png"></img>  
                     </div>
@@ -130,7 +130,7 @@
                         <input type="text" name="subject" class="subject" placeholder="Asunto">
                         <textarea name="message" class="message" placeholder="Mensaje" cols="60" rows="6"></textarea>
                         <input type="submit" value="Enviar" class="submit">
-                        <img class="b-contact" src="./img/b-form.png"></img>  
+                        <img class="b-contact" src="./img/b-form.png"></img> 
                     </form>
                     <div class="credits">
                         <span></span>
