--- a/index.html
+++ b/index.html
@@ -98,9 +98,20 @@
                     
                     <div class="swiper-projects">
                         <div class="swiper-wrapper">
-                            <div class="swiper-slide">Slide 1</div>
-                            <div class="swiper-slide">Slide 2</div>
-                            <div class="swiper-slide">Slide 3</div>
+                            <div class="swiper-slide">
+                                <img id="show-project" src="./img/project01.png" alt="Proyecto Zine">
+                                <div class="project-01">
+                                    <h1>ZINE</h1>
+                                    <p>JAVASCRIPT <span>/</span> HTML5 <span>/</span> CSS3 <span>/</span> SASS</p>
+                                    <p>GIT <span>/</span> NPM <span>/</span> PHOTOSHOP <span>/</span> FIGMA</p>
+                                    <div class="buttons">
+                                        <a href="https://luciamouriz.github.io/api-tmdb/">Ver Proyecto</a>
+                                        <a href="https://github.com/luciamouriz/api-tmdb">Ver Github</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="swiper-slide"></div>
+                            <div class="swiper-slide"></div>
                         </div>
                         <!-- Add Arrows -->
                         <div class="swiper-buttons">
