Update: cambios de colores en el diseño

--- a/index.html
+++ b/index.html
@@ -51,11 +51,9 @@
                     </div>
 
                     <div class="p-about">
-                        <p>Me llamo Lucía y soy desarrolladora web ubicada en Ciudad Real (España), tambien con estudios de diseño UX/UI en la escuela de Labasad (Barcelona).</p>
-                        <br>
-                        <p>Me apasiona todo lo que tenga que ver con el diseño y desarrollo web.</p>
-                        <br>
-                        <p>Desde pequeña me encanta la informatica y el diseño, y poder relacionar esas dos ramas fue lo que me animo a estudiar programacion y diseño web.</p>
+                        <p>Apasionada por el <code>desarrollo web &#128187;</code> y el <code>diseño UX/UI &#127912;</code>. </p><br>
+                        <p>Cada dia aprendo cosas nuevas para <code>superar nuevos retos &#128170;</code> a futuro.</p> <br>  
+                        <p>Mi objetivo es crear a nivel profesional desarrollos intuitivos, atractivos y modernos.</p>
                     </div>
                     
                     <div class="card-profile">
@@ -76,7 +74,7 @@
                         <span class="line"></span>
                     </div>
                     <div class="p-skills">
-                        <p>Soy una persona que no para quieta, que le gusta aprender y superarse a si misma con cada proyecto, organizada y con gran atención a los detalles.</p>
+                        <p>Capacidad creativa con gran atención a los detalles y resolución.</p>  
                     </div>
                     <div class="interests">
                         <h2>Mis intereses</h2>
@@ -146,8 +144,8 @@
                     <div class="credits">
                         <span></span>
                         <div>
-                            <p>Diseñado y programado por Lucia</p>
-                            <p>Todos los derechos reservados &copy; 2022 Lucia Sanchez</p>
+                            <p>Diseñado y desarrollado por Lucia</p>
+                            <p>© 2022 | Lucía Sánchez Mouriz </p>
                         </div>
                     </div>
                     
