Update: modificaciones visuales

--- a/index.html
+++ b/index.html
@@ -97,14 +97,14 @@
                     <div class="swiper-projects">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide">
-                                <img id="show-project" src="./img/project01.png" alt="Proyecto Zine">
+                                <img id="show-project" src="./img/project01.jpg" alt="Proyecto Zine">
                                 <div class="project-01">
                                     <h1>ZINE</h1>
                                     <p>JAVASCRIPT <span>/</span> HTML5 <span>/</span> CSS3 <span>/</span> SASS</p>
                                     <p>GIT <span>/</span> NPM <span>/</span> PHOTOSHOP <span>/</span> FIGMA</p>
                                     <div class="buttons">
-                                        <a href="https://luciamouriz.github.io/api-tmdb/">Ver Proyecto</a>
-                                        <a href="https://github.com/luciamouriz/api-tmdb">Ver Github</a>
+                                        <a href="https://luciamouriz.github.io/zine/">Ver Proyecto</a>
+                                        <a href="https://github.com/luciamouriz/zine>">Ver Github</a>
                                     </div>
                                 </div>
                             </div>
@@ -112,14 +112,9 @@
                             <div class="swiper-slide"></div>
                         </div>
                         <!-- Add Arrows -->
-                        <div class="swiper-buttons">
-                            <div class="swiper-button-next"></div>
-                            <div class="swiper-button-prev"></div>
-                        </div>
-                        
+                        <div class="swiper-button-next"></div>
+                        <div class="swiper-button-prev"></div>
                     </div>
-                    <!-- Add Pagination -->
-                    <div class="swiper-pagination-projects"></div>
                 </div>
             </div>
             <div class="swiper-slide">
@@ -144,7 +139,7 @@
                     <div class="credits">
                         <span></span>
                         <div>
-                            <p>Diseñado y desarrollado por Lucia</p>
+                            <p>Diseñado y desarrollado con &#128156; por Lucia</p>
                             <p>© 2022 | Lucía Sánchez Mouriz </p>
                         </div>
                     </div>
