Update: cambios en animacion saludo de ABOUT

--- a/index.html
+++ b/index.html
@@ -53,11 +53,12 @@
                     <div class="p-about">
                         <p>Apasionada por el <code>desarrollo web &#128187;</code> y el <code>diseño UX/UI &#127912;</code>. </p><br>
                         <p>Cada dia aprendo cosas nuevas para <code>superar nuevos retos &#128170;</code> a futuro.</p> <br>  
-                        <p>Mi objetivo es crear a nivel profesional desarrollos intuitivos, atractivos y modernos.</p>
+                        <p>En mis trabajos siempre intento transmitir la pasión que siento por la profesión y un alto grado de implicación y perfeccionismo para conseguir siempre el mejor resultado.</p>
                     </div>
                     
                     <div class="card-profile">
-                        <div class="saludo" id="saludo">¡Hola!, soy <span>Lu</span>cía</div>
+                        <p class="saludo" id="saludo">¡Hola!, soy <span>Lu</span>cía.</p>
+                        <div class="dialog"></div>
                         <img src="./img/photo.png" alt="Retrato Lucia">
                         <img class="b-img" src="./img/b-img.png"></img>  
                     </div>
@@ -79,7 +80,7 @@
                     <div class="interests">
                         <h2>Mis intereses</h2>
                         <div class="p-interests">
-                            <p>Diseño UX/UI</p>
+                            <p>Diseño de interfaces (UI)</p>
                             <p>Maquetación web</p>
                             <p>Implementación de Api REST</p>
                         </div>
@@ -132,7 +133,7 @@
                             <input type="email" name="email" class="email" placeholder="Email">
                         </label>
                         <input type="text" name="subject" class="subject" placeholder="Asunto">
-                        <textarea name="message" class="message" placeholder="Mensaje" cols="60" rows="6"></textarea>
+                        <textarea name="message" class="message" placeholder="Mensaje" cols="60" rows="5"></textarea>
                         <input type="submit" value="Enviar" class="submit">
                         <img class="b-contact" src="./img/b-form.png"></img> 
                     </form>
