Update: cambio en foto ABOUT, añadiendo Hovers etc

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <div class="home">
                     <h1 class="h1-2">LU</h1>
                     <h1 class="h1-1">LU</h1>
-                    <p>Desarrolladora <br>  - Web -</p>
+                    <p>Desarrollo / Diseño<br>  - Web -</p>
                     <img class="b-h1" src="./img/b-h1.png" alt="Etiqueta h1">
                     <img class="arrow" src="./img/arrow-home.png" alt="Scroll Down">
                     
@@ -52,8 +52,8 @@
 
                     <div class="p-about">
                         <p>Apasionada por el <code>desarrollo web &#128187;</code> y el <code>diseño UX/UI &#127912;</code>. </p><br>
-                        <p>Cada dia aprendo cosas nuevas para <code>superar nuevos retos &#128170;</code> a futuro.</p> <br>  
-                        <p>En mis trabajos siempre intento transmitir la pasión que siento por la profesión y un alto grado de implicación y perfeccionismo para conseguir siempre el mejor resultado.</p>
+                        <p>Cada dia aprendo cosas nuevas para superar <code>nuevos retos &#128170;</code>.</p> <br>  
+                        <p>En mis trabajos siempre intento transmitir la pasión, implicación y perfeccionismo que siento por la profesión para conseguir siempre el mejor resultado.</p>
                     </div>
                     
                     <div class="card-profile">
@@ -105,12 +105,12 @@
                                     <p>GIT <span>/</span> NPM <span>/</span> PHOTOSHOP <span>/</span> FIGMA</p>
                                     <div class="buttons">
                                         <a href="https://luciamouriz.github.io/zine/">Ver Proyecto</a>
-                                        <a href="https://github.com/luciamouriz/zine>">Ver Github</a>
+                                        <a href="https://github.com/luciamouriz/zine">Ver Github</a>
                                     </div>
                                 </div>
                             </div>
-                            <div class="swiper-slide"></div>
-                            <div class="swiper-slide"></div>
+                            <div class="swiper-slide">PROXIMAMENTE</div>
+                            <div class="swiper-slide">PROXIMAMENTE</div>
                         </div>
                         <!-- Add Arrows -->
                         <div class="swiper-button-next"></div>
@@ -129,11 +129,11 @@
                     </div>
                     <form action="https://formspree.io/f/mlevjokq" method="POST">
                         <label>
-                            <input type="text" name="text" class="name" placeholder="Nombre">
-                            <input type="email" name="email" class="email" placeholder="Email">
+                            <input type="text" name="Nombre" class="name" placeholder="Nombre">
+                            <input type="email" name="Email" class="email" placeholder="Email">
                         </label>
-                        <input type="text" name="subject" class="subject" placeholder="Asunto">
-                        <textarea name="message" class="message" placeholder="Mensaje" cols="60" rows="5"></textarea>
+                        <input type="text" name="Asunto" class="subject" placeholder="Asunto">
+                        <textarea name="Mensaje" class="message" placeholder="Mensaje" cols="60" rows="4"></textarea>
                         <input type="submit" value="Enviar" class="submit">
                         <img class="b-contact" src="./img/b-form.png"></img> 
                     </form>
