Update: Ultimos cambios en el diseño

--- a/index.html
+++ b/index.html
@@ -14,13 +14,15 @@
 </head>
 <body>
     <header>
-        <div class="nav">
-            <h1 data-index="1">INICIO</h1>
-            <h1 data-index="2">CONÓCEME</h1>
-            <h1 data-index="3">HABILIDADES</h1>
-            <h1 data-index="4">PROYECTOS</h1>
-            <h1 data-index="5">CONTÁCTAME</h1>
-        </div>
+        <nav>
+            <ul>
+                <li data-index="1">Inicio</li>
+                <li data-index="2">Conóceme</li>
+                <li data-index="3">Habilidades</li>
+                <li data-index="4">Proyectos</li>
+                <li data-index="5">Contáctame</li>
+            </ul>
+        </nav>
         <div class="container-header">
             <img id="logo" class="logo" src="./img/logo.png" alt="Logo Lucia">
             <div class="menu">
